[package]
name = "binlibplus"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
inquire = "0.5.3"

[lib]
name = "lib"
parh = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/main.rs"
